--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,7 +6,10 @@
 				<ul class="nav pull-right">
 					<li><%= link_to "Home", root_path %></li>
 					<li><%= link_to "Help", help_path %></li>
-					<li><%= link_to "Sign in", '#' %></li>
+					<% if signed_in? %>
+					<% else %>	
+					<li><%= link_to "Sign in", signin_path %></li>
+					<% end %>
 				</ul>
 			</nav>
 		</div>
